# comptext-core

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  benchmark.py  config.toml  data-model.md  plan.md  pyproject.toml  requirements.txt  spec.md  tasks.md  test_run_report.md
.agents/: hooks.json  mcp_config.json
.agents/hooks/: check_exceptions.bat  check_exceptions.sh
.agents/skills/verify-compact/: SKILL.md
.github/workflows/: ci.yml
assets/: comptext-logo-braille-color.ans  demo.tape
comptext/: __init__.py  cmd_registry.py  commands.py  config.py  nvidia_client.py  repl.py  state.py
comptext/cli/: __main__.py  audit.py  logo.py  verify.py  verify_compact.py
comptext/core/: __init__.py  capabilities.py  cognitive.py  crypto.py  engine.py  engine_stats.py  plan_validator.py  skills.py
comptext/mcp/: server.py
comptext/providers/: __init__.py  exceptions.py  google.py  nvidia.py  xai.py
comptext/terminal/: renderer.py
docs/: rtk-proxy.md
tests/: test_capabilities.py  test_cognitive.py  test_crypto.py  test_ed25519_e2e.py  test_engine_stats.py  test_plan_validator.py  test_providers.py  test_renderer.py  test_repl_and_client.py  test_skills_loader.py  test_validation_safety.py
tests/fixtures/air/: hash-chain.audit.air.json
tests/fixtures/evidence/: hash-chain.events.json
tests/fixtures/proposals/: 20260613T120000Z-phase-4f-example.json
